--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
